--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .react-horizontal-scrolling-menu--scroll-container::-webkit-scrollbar {
   display: none;
 }
@@ -5,4 +9,11 @@
 .react-horizontal-scrolling-menu--scroll-container {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+.containe-scrolling {
+  display: flex;
+  overflow: hidden;
+  -ms-overflow-style: 0; /* IE and Edge */
+  scrollbar-width: 0; /* Firefox */
 }
